--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     
                     <div class="redes">
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </header>
     
@@ -122,8 +122,8 @@
                 <div class="col">
                     <div class="score">
                         <div class="box">
-                            <div class="chart" data-percent="90">
-                                90%
+                            <div class="chart" data-percent="20">
+                                20%
                             </div>
                             <h2>BOOSTRAP</h2>
                         </div>
